# code_agent

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  pytest.ini  requirements.txt  tsconfig.json
agent/: __init__.py  budget.py  build_errors.py  build_runner.py  checkpoint.py  cmake_context.py  cmake_prompt.py  editor.py  fix_report.py  llm.py  locator.py  loop.py  multi_agent.py  profile.py  project_agents.py  repair_hints.py  repair_memory.py  tester.py  tools.py  trace.py
docs/: cmake-build-fix-mvp.md  code_agent_prototype_plan.md  code_agent_week1_codex_tdd_plan.md  code_agent_week1_design.md  code_agent_week1_fixes_codex.md
eval/: cmake_skill_ab.py  cmake_skill_ab_report.py  run_eval.py  spec_ab.py  ts_bridge.py
eval/tasks_cmake_real/r01_poco_postgresql_imported_target/repo/: CMakeLists.txt
eval/tasks_cmake_real/r01_poco_postgresql_imported_target/repo/cmake/: PostgreSQLClient.cmake
eval/tasks_cmake_real/r01_poco_postgresql_imported_target/repo/src/: main.cpp
eval/tasks_cmake_real/r05_petsc_offline_target_missing/repo/: CMakeLists.txt
eval/tasks_cmake_real/r05_petsc_offline_target_missing/repo/cmake/: PETScOffline.cmake
eval/tasks_cmake_real/r09_transitive_local_link_missing/repo/: CMakeLists.txt
eval/tasks_cmake_real/r09_transitive_local_link_missing/repo/include/mathx/: core.hpp
eval/tasks_cmake_real/r09_transitive_local_link_missing/repo/src/: app_math.cpp  core.cpp  main.cpp
profiles/: cmake.yaml  empty.yaml  node.yaml  python.yaml
prompts/: system.md
src/: cli.ts  index.ts
tests-ts/: architecture.test.ts  (+17 more)
(+261 files in other folders)
